fix expand menu bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1433,6 +1433,14 @@ a {
   .menu-bar-main-container {
     width: 55px;
   }
+  .menu-bar-main-container:hover {
+    transition-delay: 1s;
+    width: 150px;
+  }
+  .menu-bar-main-container:hover .menu-bar-nav-container {
+    transition-delay: 1s;
+    width: 150px;
+  }
 }
 
 .menu-bar-header-container {
@@ -1533,12 +1541,7 @@ a {
 @media screen and (max-width: 370px) {
   .menu-bar-nav-container {
     width: 50px;
-  }
-  .menu-bar-nav-container:hover {
-    -webkit-transform: none;
-    -moz-transform: none;
-    -ms-transform: none;
-    transform: none;
+    transition: all 300ms;
   }
 }
 
